<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">
    <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/colorGray"
    />
    <CheckBox
        android:id="@+id/cb_selectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_cart_select_all"
        android:padding="10dp"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@id/cb_selectAll"
        android:layout_centerVertical="true"
        android:text="@string/app_cart_total"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text="@string/app_cart_balance"
        android:textSize="16sp"/>
</RelativeLayout>
