<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout
        android:id="@+id/rl_home"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/selector_home_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/iv_home"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/app_home_text"/>
    </com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout>
    <com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout
        android:id="@+id/rl_category"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/selector_category_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/iv_category"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/app_category_text"/>
    </com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout>
    <com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout
        android:id="@+id/rl_community"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/selector_community_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/iv_community"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/app_community_text"/>
    </com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout>
    <com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout
        android:id="@+id/rl_cart"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/selector_cart_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/iv_cart"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/app_cart_text"/>
    </com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout>
    <com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout
        android:id="@+id/rl_mine"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/selector_personal_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/iv_mine"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/app_mine_text"/>
    </com.ttyooyu.market.ui.widget.HomeMenuRelativeLayout>
</LinearLayout>